[package]
name          = "mio-extras"
version       = "2.0.6"
license       = "MIT OR Apache-2.0"
authors       = ["Carl Lerche <me@carllerche.com>", "David Hotham"]
description   = "Extra components for use with Mio"
documentation = "https://docs.rs/mio-extras"
repository    = "https://github.com/dimbleby/mio-extras"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [".gitignore"]
edition       = "2018"

[dependencies]
sgx_tstd    = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
mio         = { git = "https://github.com/mesalock-linux/mio-sgx", branch = "v0.6_sgx_1.1.3" }
log         = { git = "https://github.com/mesalock-linux/log-sgx" }
once_cell   = { git = "https://github.com/mesalock-linux/once_cell-sgx" }
slab        = { git = "https://github.com/mesalock-linux/slab-sgx" }

[features]
default = ["std", "mesalock_sgx"]
# Enables `once_cell::sync` module.
std = ["mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]

[[test]]
name = "test"
path = "test/mod.rs"
